--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,4 @@
-Information About the Post
-<ul>
-  <li> <%= @author.name %></li>
-  <li> <%= @author.hometown %></li>
-</ul>
-<%= @post.title %>
-<%= @post.content %>
+    Information About the Post
+    <%= render 'authors/author' %>
+    <%= @post.title %>
+    <%= @post.content %>
